--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -5,46 +5,66 @@
 	padding: 0 50px;
 	display: flex;
 	justify-content: space-between;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 10;
 
 	&__location {
 		font-size: 18px;
 		color: #767e9f;
-		margin-bottom: 20px;
 		text-align: center;
 		justify-content: center;
-		margin-top: 25px;
+		margin-top: 0px;
 	}
 
-	&__sign_out {
-		width: 120px;
-		height: 40px;
-		margin-top: 15px;
+	&__dropdown {
 		display: flex;
-		justify-content: center;
-		align-items: center;
-		background: #4d75f4;
-		border-radius: 5px;
-		color: white;
+		margin-top: 15px;
 		cursor: pointer;
-		font-size: 15px;
-		border: 1px solid #4d75f4;
 
-		&:hover {
-			background: white;
-			color: #4d75f4;
-			border: 1px solid #4d75f4;
+		&__user {
+			height: 40px;
+			width: 40px;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+
+			img {
+				width: 100%;
+			}
 		}
 
-		&:focus {
-			background: white;
-			color: #4d75f4;
-			border: 1px solid #4d75f4;
+		&__down {
+			margin-left: 10px;
+			margin-top: -10px;
+
+			&__icon {
+				margin-top: -30px;
+			}
 		}
 
-		&:active {
-			background: white;
-			color: #4d75f4;
-			border: 1px solid #4d75f4;
+		&__menu {
+			margin-top: -10px;
+
+			&__item {
+				width: 150px;
+				color: #162359;
+				padding: 5px 0;
+
+				span {
+					font-size: 14px;
+					margin-left: 10px;
+					font-weight: 600;
+				}
+
+				&:hover {
+					color: #4d75f4;
+				}
+			}
 		}
 	}
 }
