--- a/src/pages/projects/style.module.scss
+++ b/src/pages/projects/style.module.scss
@@ -118,6 +118,113 @@
 					}
 				}
 			}
+
+			&__modal {
+				&__header {
+					font-size: 18px;
+					color: #767e9f;
+					margin-bottom: 0px;
+					text-align: center;
+					justify-content: center;
+				}
+
+				&__form {
+					margin-top: 20px;
+					width: 100%;
+
+					&__item {
+						display: block;
+						margin-bottom: 20px;
+
+						&__label {
+							color: #162359;
+							font-size: 14px;
+							line-height: 18px;
+							margin-bottom: 5px;
+						}
+
+						&__input {
+							color: #162359;
+							height: 45px;
+							width: 100%;
+							border: 1px solid #cdd1de;
+							box-sizing: border-box;
+							border-radius: 5px;
+							background: #f7f8fc;
+							font-weight: 500;
+							font-size: 16px;
+							line-height: 18px;
+							color: #162359;
+							transition: 0.3s;
+							padding: 20px;
+
+							&::placeholder {
+								color: #767e9f;
+								box-sizing: border-box;
+								transition: margin 0.5s ease-out;
+								font-size: 14px;
+								line-height: 15px;
+								margin-bottom: 17px;
+								text-align: justify;
+							}
+
+							&:-ms-input-placeholder {
+								color: #767e9f;
+								box-sizing: border-box;
+								transition: margin 0.5s ease-out;
+								font-size: 14px;
+								line-height: 15px;
+								margin-bottom: 17px;
+								text-align: justify;
+							}
+
+							&::-ms-input-placeholder {
+								color: #767e9f;
+								box-sizing: border-box;
+								transition: margin 0.5s ease-out;
+								font-size: 14px;
+								line-height: 15px;
+								margin-bottom: 17px;
+								text-align: justify;
+							}
+						}
+					}
+
+					&__button {
+						width: 120px;
+						height: 40px;
+						margin: auto;
+						margin-top: 35px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						background: #4d75f4;
+						border-radius: 5px;
+						color: white;
+						cursor: pointer;
+						font-size: 15px;
+						border: 1px solid #4d75f4;
+
+						&:hover {
+							color: white;
+							background: #4d75f4;
+							border: 1px solid #4d75f4;
+						}
+
+						&:focus {
+							color: white;
+							background: #4d75f4;
+							border: 1px solid #4d75f4;
+						}
+
+						&:active {
+							color: white;
+							background: #4d75f4;
+							border: 1px solid #4d75f4;
+						}
+					}
+				}
+			}
 		}
 	}
 }
