feat: finish project

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ code {
 }
 
 .ant-collapse > .ant-collapse-item.ant-collapse-no-arrow > .ant-collapse-header {
-	background: lightgray;
+	background: #e5e5e5;
 	color: black;
 	font-size: 16px;
 	font-weight: 600;
